<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DangKiActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtdangki"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/ng_k"
        android:textSize="25sp"
        android:textColor="@color/colortext"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginTop="10dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtdangki"
        android:layout_marginTop="5dp"
        android:id="@+id/line1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>



    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        android:layout_marginTop="5dp"
        android:id="@+id/line8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="UserName"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>



    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/line8"
        android:layout_marginTop="5dp"
        android:id="@+id/line2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/pass"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_key"
            android:drawablePadding="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>



    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        android:layout_marginTop="5dp"
        android:id="@+id/line3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nh_p_l_i_pass"
            android:id="@+id/repass"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_key"
            android:drawablePadding="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        android:layout_marginTop="5dp"
        android:id="@+id/line4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:id="@+id/mobile"
            android:inputType="number"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/line4"
        android:layout_marginRight="25dp"
        android:background="@drawable/background_button"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:text="Đăng Kí"
        android:id="@+id/btndangki"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>